# Qt-examples

./: .gitignore  README.md
AvoidRawPointer/: A.cpp  A.h  B.cpp  B.h  C.cpp  C.h  CMakeLists.txt  Widget.cpp  Widget.h
BinarySerialization/: CMakeLists.txt  Widget.cpp  Widget.h
ButtonToggle/: CMakeLists.txt  Widget.cpp
CPUStressTest/: CMakeLists.txt  Widget.cpp  Widget.h
CircularSlider/: CMakeLists.txt  Widget.cpp  Widget.h  main.cpp
Database/: CMakeLists.txt  Widget.cpp  Widget.h
Dialog/: CMakeLists.txt  Dialog.cpp  Dialog.h  Widget.cpp  Widget.h  main.cpp
Doxygen/: CMakeLists.txt  Doxyfile  Widget.cpp  Widget.h
Doxygen/document/html/: _widget_8cpp.html  _widget_8h.html  _widget_8h_source.html  annotated.html  annotated_dup.js  class_widget-members.html  class_widget.html  class_widget.js  classes.html  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_func.html  globals.html  globals_func.html  hierarchy.html  hierarchy.js  index.html  (+3 more)
Enum/: A.cpp  A.h  B.cpp  B.h  CMakeLists.txt  Widget.cpp
EventLoop/: CMakeLists.txt  Widget.cpp  Widget.h  main.cpp
ExternalCall/: CMakeLists.txt  Widget.cpp  Widget.h
ExternalCall/testApplication/: CMakeLists.txt  Widget.cpp  Widget.h
FlowLayout/: CMakeLists.txt  Widget.cpp  Widget.h  flowlayout.cpp  flowlayout.h  main.cpp
GenericQtProject/: CLAUDE.md  CMakeLists.txt  Widget.cpp  main.cpp
GoogleTest/: CMakeLists.txt  Functions.cpp  Functions.h  TestFunctions.cpp  TestFunctions.h
GraphicsView/: CMakeLists.txt  GraphicsScene.cpp  GraphicsScene.h  GraphicsView.cpp  GraphicsView.h  MagnifierWidget.cpp  MagnifierWidget.h  Widget.cpp  main.cpp
GraphicsViewLayout/: CMakeLists.txt  ParameterWidget.cpp  ParameterWidget.h  RulerWidget.cpp  RulerWidget.h  Widget.cpp  Widget.h
HoverDialog/: CMakeLists.txt  HoverDialog.cpp  HoverDialog.h  Widget.cpp  main.cpp
ImageGestures/: CMakeLists.txt  imagewidget.cpp  main.cpp
ImageSliceOutline/: OpenGLWidget.cpp
JsonlGenertor/: CMakeLists.txt  Widget.cpp  Widget.h
LineChart/: CMakeLists.txt  mainwindow.cpp
LocalIPC/: CMakeLists.txt
LocalIPC/client/: CMakeLists.txt  Client.cpp  Client.h  ClientWidget.cpp  ClientWidget.h  ClientWorker.cpp  ClientWorker.h  ClientWorker2.cpp  ClientWorker2.h  main.cpp
LocalIPC/server/: CMakeLists.txt  Server.cpp  Server.h  ServerWidget.cpp  ServerWidget.h  main.cpp
LocalIPCAdvanced/: CMakeLists.txt
LocalIPCAdvanced/client/: CMakeLists.txt  Client.cpp  Client.h  ClientWidget.cpp  ClientWidget.h  ClientWorker.cpp  ClientWorker.h  DaqcClient.cpp  DaqcClient.h  UpdateInfoWorker.cpp  UpdateInfoWorker.h  Worker.cpp  Worker.h
LocalIPCAdvanced/client/lib/Log4Qt/lib/: log4qt.lib
LocalIPCAdvanced/client/lib/Log4Qt/lib/cmake/Log4Qt/: Log4QtTargets-debug.cmake  Log4QtTargets-release.cmake  Log4QtTargets.cmake
LocalIPCAdvanced/client/ui/: CMakeLists.txt  ClientWidget.cpp  ClientWidget.h  main.cpp
LocalIPCAdvanced/common/: DaqcClientDef.h  ParameterDef.h  StringDef.h
LocalIPCAdvanced/server/: CMakeLists.txt  DaqcServer.cpp  DaqcServer.h  ResourceManager.cpp  ResourceManager.h  Server.cpp  Server.h  ServerWorker.cpp  ServerWorker.h  main.cpp
LocalIPCAdvanced/server/lib/: daqclib.h
LocalIPCAdvanced/server/lib/Daqc/: daqclib.cpp
LocalIPCAdvanced/server/lib/Log4Qt/lib/: log4qt.lib  log4qt_d.lib
LocalIPCAdvanced/server/lib/Log4Qt/lib/cmake/Log4Qt/: Log4QtConfigVersion.cmake  Log4QtTargets-debug.cmake  Log4QtTargets.cmake
LocalIPCAdvanced/server/packets/: FramePacket.cpp  ReplyPacket.cpp  ReplyPacket.h  RequestPacket.h
LocalIPCAdvanced/server/tasks/: DaqcHandleRequestTask.cpp  DaqcHandleRequestTask.h  DaqcServerHandleReceiveMessageTask.cpp  DaqcServerHandleReceiveMessageTask.h  GetValueTask.cpp  GetValueTask.h  HandleReceiveMessageTask.h  HandleRequestTask.cpp  HandleRequestTask.h  SendFrameTask.cpp  SendFrameTask.h  SendReplyTask.cpp  SendReplyTask.h  SendTask.cpp  SendTask.h  SetValueTask.cpp  SetValueTask.h  UpdateValueTask.cpp  UpdateValueTask.h
LocalIPCAdvanced/server/ui/: ServerWidget.cpp  ServerWidget.h
Log4Qt/: CMakeLists.txt  main.cpp
Log4Qt/Log4Qt/lib/: log4qt_d.lib
Magnifier/: CMakeLists.txt  GraphicsScene.cpp  GraphicsScene.h  GraphicsView.cpp  GraphicsView.h  MagnifierWidget.cpp  MagnifierWidget.h  Widget.cpp  Widget.h  main.cpp
MemoryLeakDetectCRT/: CMakeLists.txt  Widget.cpp  main.cpp
MemoryLeakDetectVLD/: CMakeLists.txt  Widget.cpp  Widget.h  main.cpp
MiniDump/: CMakeLists.txt  main.cpp
PreventAltAndF4/: CMakeLists.txt  KeyEventHandler.cpp  KeyEventHandler.h  main.cpp
QImageToQJsonValue/: CMakeLists.txt  Widget.cpp  Widget.h  main.cpp
QProperty/: CMakeLists.txt  MyClass.cpp  MyClass.h  Widget.cpp  Widget.h
RestartApplication/: CMakeLists.txt  Widget.cpp  main.cpp
SendImageViaLocalSocket/: CMakeLists.txt
SendImageViaLocalSocket/client/: CMakeLists.txt  Client.cpp  Client.h  ClientWidget.cpp  ClientWidget.h
SendImageViaLocalSocket/server/: CMakeLists.txt  Server.cpp  Server.h  ServerWidget.cpp  ServerWidget.h  main.cpp
SerialPort/: CMakeLists.txt  Classes.h  SerialPortThread.cpp  SerialPortThread.h  SerialPortWorker.cpp  SerialPortWorker.h  widget.cpp  widget.h
ShowVersion/: CMakeLists.txt  VersionConfig.h.in  Widget.cpp
StateMachine/: CMakeLists.txt  Widget.cpp  Widget.h
StyledComboBox/: CMakeLists.txt  Widget.cpp
TextDocument/: CMakeLists.txt  Widget.cpp  Widget.h  main.cpp  res.qrc
Thread/: CMakeLists.txt  Widget.cpp  Widget.h  Worker.cpp  Worker.h  WorkerThread.cpp  WorkerThread.h
ThreadPool/: CMakeLists.txt  SimpleTask.cpp  SimpleTask.h  Widget.cpp  Widget.h
TouchEvent/: CMakeLists.txt  Widget.cpp  Widget.h  main.cpp
TwoWindows/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  SecondWindow.cpp  SecondWindow.h  main.cpp
UnitTest/: CMakeLists.txt  Functions.cpp  Functions.h  TestFunctions.cpp  TestFunctions.h
testPacket/: CMakeLists.txt  Widget.cpp  Widget.h
testPacket/packets/: DaqcClientDef.h  FramePacket.cpp  FramePacket.h  Packet.cpp  Packet.h  ParameterInfoPacket.cpp  ParameterInfoPacket.h  RequestUpdatePacket.cpp  RequestUpdatePacket.h
(+51 files in other folders)
